--- a/about/welcome/index.html
+++ b/about/welcome/index.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: "Welcome"
+category: about
+slug: welcome
 post_id: 75
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy
 excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Massage and Trigger Point Release Therapy.
