--- a/clinic-information/index.html
+++ b/clinic-information/index.html
@@ -1,6 +1,7 @@
+---
 layout: page
 title: "Appointments"
-permalink: {{site.url}}/clinic-information
+slug: clinic-information
 post_id: 7
 excerpt_separator: Book your Massage Therapy appointment online with a Kitchener massage therapist.
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, Massage appointment, massage therapy appointment, registered massage therapy appointment, book online
@@ -17,4 +18,4 @@ If you do not want to book online, please feel free to call me to book an appoin
 Please Note:
 * an appointment is required in advance
 * 24 hours’ notice is necessary to cancel an appointment and all missed appointments must be paid for.
-* There is no access to debit or credit in the <a title="clinic" href="{{site.baseurl}}/clinic-information/clinic">clinic</a>, please bring cash or Cheques only.
+* There is no access to debit or credit in the <a title="clinic" href="{{site.url}}/clinic-information/clinic">clinic</a>, please bring cash or Cheques only.
