--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Massage and Trigger Point Release Therapy.
 ---
 <h1>Kitchener Massage Therapy</h1>
-Specializing in <a href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">Deep Tissue Massage </a>and<a href="{{site.url}}/generalmassagetherapy/trigger-points-and-trigger-point-therapy"> Trigger Point Release Therapy </a>to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.
+<p>Specializing in <a href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">Deep Tissue Massage </a>and<a href="{{site.url}}/generalmassagetherapy/trigger-points-and-trigger-point-therapy"> Trigger Point Release Therapy </a>to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</p>
 <div class="testimonialbox">
 <div class="testimonialinner">
 <div class="quotetop">
@@ -24,9 +24,5 @@ I walked out of my first treatment with Jeremy impressed that he did exactly wha
 
 </div>
 <h2>What is Deep Tissue Massage?</h2>
-Deep Tissue massage is similar to the most common type of massage, Swedish massage, in that your therapist uses long, smooth, and kneading strokes to achieve healing changes in the body. The two forms of massage differ in that <a title="Discomfort of deep tissue massage" href="{{site.url}}/generalmassagetherapy/does-deep-tissue-massage-heart">Deep Tissue massage aims to affect the deeper structures of the body </a>and have a deeper level of healing. Deep Tissue massage is very effective in treating chronic muscle and connective tissue injuries. <a href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">Read more...</a><a title="What is Deep Tissue Massage?" href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">
-</a>
-<div id="formbox">
-<h1>Contact Form</h1>
-[contact-form-7 id="431" title="Contact"]
-</div>
+<p>Deep Tissue massage is similar to the most common type of massage, Swedish massage, in that your therapist uses long, smooth, and kneading strokes to achieve healing changes in the body. The two forms of massage differ in that <a title="Discomfort of deep tissue massage" href="{{site.url}}/generalmassagetherapy/does-deep-tissue-massage-heart">Deep Tissue massage aims to affect the deeper structures of the body </a>and have a deeper level of healing. Deep Tissue massage is very effective in treating chronic muscle and connective tissue injuries. <a href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">Read more...</a><a title="What is Deep Tissue Massage?" href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">
+</a></p>
