all pages updated except knowldege center, metatages added

--- a/knowledge-centre/index.html
+++ b/knowledge-centre/index.html
@@ -6,6 +6,31 @@ post_id: 20
 excerpt_separator: Information about registered massage therapy and massage therapists in Kitchener Waterloo area. 
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener, registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, 
 ---
+<h1>Knowledge Centre</h1>
 
+<p>Information about <a title="Welcome" href="{{site.url}}/about/welcome">registered massage therapy </a>and <a title="About" href="{{site.url}}/about">massage therapists </a>in<a title="Contact" href="{{site.url}}/contact"> Kitchener Waterloo area</a>. Categories and topics include General Massage Therapy, Stretching and <a title="Rock Climbing as a Lifestyle" href="{{site.url}}/about/rock-climbing-as-a-lifestyle">Rock Climbing</a>.</p>
 
-Information about <a title="Welcome" href="{{site.url}}/about/welcome">registered massage therapy </a>and <a title="About" href="{{site.url}}/about">massage therapists </a>in<a title="Contact" href="{{site.url}}/contact"> Kitchener Waterloo area</a>. Categories and topics include General Massage Therapy, Stretching and <a title="Rock Climbing as a Lifestyle" href="{{site.url}}/about/rock-climbing-as-a-lifestyle">Rock Climbing</a>.
+{% for post in paginator.posts %}
+  <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+  <p class="author">
+    <span class="date">{{ post.date }}</span>
+  </p>
+  <div class="content">
+    {{ post.excerpt_separator }}
+  </div>
+{% endfor %}
+
+<!-- Pagination links -->
+<div class="pagination">
+  {% if paginator.previous_page %}
+    <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
+  {% else %}
+    <span class="previous">Previous</span>
+  {% endif %}
+  <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+  {% if paginator.next_page %}
+    <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+  {% else %}
+    <span class="next ">Next</span>
+  {% endif %}
+</div>
