--- a/contact/index.html
+++ b/contact/index.html
@@ -6,17 +6,14 @@ post_id: 21
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener, registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, 
 excerpt_separator: The quickest way to book an appointment with me is to book a treatment online or get in touch with me directly to make a massage therapy appointment.
 ---
-The quickest way to book an appointment with me is to <a href="{{site.url}}/clinic-information">book a treatment online</a>.
+<h1>Contact</h1>
+<p>The quickest way to book an appointment with me is to <a href="{{site.url}}/clinic-information">book a treatment online</a>.</p>
 
-To get in touch with me directly to make a <a title="Book Massage Therapy Appointment Online" href="{{site.url}}/clinic-information">massage therapy appointment </a>in Kitchener/Waterloo, you can call me, send me an email or text message, or you can <a href="http://www.facebook.com/pages/KWmassage/354131367967709">Facebook</a> me. You can also use the form below to send me a message.
+<p>To get in touch with me directly to make a <a title="Book Massage Therapy Appointment Online" href="{{site.url}}/clinic-information">massage therapy appointment </a>in Kitchener/Waterloo, you can call me, send me an email or text message. You can also use the Contact Form below to send me a message.</p>
 
-229 Frederick Street
-Kitchener, ON
-(519) 745-4112
-<a href="mailto:Jeremy@kwmassage.com">Jeremy@kwmassage.com</a>
-<div></div>
+<p><b>229 Frederick Street</br>
+Kitchener, ON</br>
+(519) 745-4112</br>
+<a href="mailto:Jeremy@kwmassage.com">Jeremy@kwmassage.com</a></b></p>
+
 <iframe src="https://mapsengine.google.com/map/embed?mid=z1kzsRant038.kwaZ-HV4FUfg" height="400" width="550"></iframe>
-<div id="formbox">
-<h1>Contact Form</h1>
-[contact-form-7 id="431" title="Contact"]
-</div>
