--- a/knowledge-centre/facts-about-registered-massage-therapy-in-ontario/index.html
+++ b/knowledge-centre/facts-about-registered-massage-therapy-in-ontario/index.html
@@ -7,7 +7,11 @@ post_id: 259
 excerpt_separator: Your Massage Therapist in Ontario is a regulated Health Care professional who has received two years of comprehensive training in anatomy, physiology, a...
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener, registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, 
 ---
-• Your Massage Therapist in Ontario is a regulated Health Care professional who has received two years of comprehensive training in anatomy, physiology, and health sciences.
-• <a title="Registered Massage Therapy in Ontario" href="{{site.url}}/generalmassagetherapy/governance-of-massage-therapy">Massage Therapy in Ontario</a> is regulated under the <a title="RHPA" href="http://74.213.160.105/oahai/Acrobatfiles/regulatedact.pdf" target="_blank">RHPA (Regulated Health Professionals Act)</a>, the same governing body that oversees nurses and physicians. This requires that your Massage Therapist conducts his/her practice in a way that offers his/her clients a safe and professional experience.
-• Most extended Health Care companies cover Massage Therapy in part or in whole.
-• If you plan to claim your Massage Therapy treatment, please contact your insurance company and find out whether you need a referral from your doctor in order to be reimbursed.
+<h1>Facts About Registered Massage Therapy in Ontario</h1>
+
+<ul class="blue">
+	<li>Your Massage Therapist in Ontario is a regulated Health Care professional who has received two years of comprehensive training in anatomy, physiology, and health sciences.</li>
+	<li><a title="Registered Massage Therapy in Ontario" href="{{site.url}}/generalmassagetherapy/governance-of-massage-therapy">Massage Therapy in Ontario</a> is regulated under the <a title="RHPA" href="http://74.213.160.105/oahai/Acrobatfiles/regulatedact.pdf" target="_blank">RHPA (Regulated Health Professionals Act)</a>, the same governing body that oversees nurses and physicians. This requires that your Massage Therapist conducts his/her practice in a way that offers his/her clients a safe and professional experience.</li>
+	<li>Most extended Health Care companies cover Massage Therapy in part or in whole.</li>
+	<li>If you plan to claim your Massage Therapy treatment, please contact your insurance company and find out whether you need a referral from your doctor in order to be reimbursed.</li>
+</ul>
