--- a/about/rock-climbing-as-a-lifestyle/index.html
+++ b/about/rock-climbing-as-a-lifestyle/index.html
@@ -4,6 +4,7 @@ title: "Rock Climbing as a Lifestyle "
 category: about
 slug: rock-climbing-as-a-lifestyle
 post_id: 316
+date: 12/01/2014
 excerpt_separator: Rock Climbing and how it plays a role into the life of a father, husband and massage therapist.
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, Climbing, climbing injury, rock climbing
 ---
