--- a/knowledge-centre/index.html
+++ b/knowledge-centre/index.html
@@ -7,33 +7,29 @@ excerpt_separator: Information about registered massage therapy and massage ther
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener, registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, 
 ---
 <h1>Knowledge Centre</h1>
-
 <p>Information about <a title="Welcome" href="{{site.url}}/about/welcome">registered massage therapy </a>and <a title="About" href="{{site.url}}/about">massage therapists </a>in<a title="Contact" href="{{site.url}}/contact"> Kitchener Waterloo area</a>. Categories and topics include General Massage Therapy, Stretching and <a title="Rock Climbing as a Lifestyle" href="{{site.url}}/about/rock-climbing-as-a-lifestyle">Rock Climbing</a>.</p>
+
 <div id="formbox"></div>
 
 {% for post in paginator.posts %}
+  <p>
   <h1>{{ post.title }}</h1>
-  <p class="author">
-    <span class="date">{{ post.date | date_to_string }}</span>
-  </p>
-  <div class="content">
-  	<p>{{ post.excerpt }} ...<a title="Read More" href="{{ post.url }}">read more...</a></p>
-  </div>
+    <div class="date">{{ post.date | date_to_string }}</div>
+   {{ post.excerpt }} ...<a title="Read More" href="{{ post.url }}">read more...</a></p>
 {% endfor %}
 
-<!-- Pagination links -->
 <div class="pagination">
-<p>
-  {% if paginator.previous_page %}
+  <p>
+    {% if paginator.previous_page %}
     <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
-  {% else %}
+    {% else %}
     <b class="previous">Previous</b>
-  {% endif %}
-  <b class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</b>
-  {% if paginator.next_page %}
+    {% endif %}
+    <b class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</b>
+    {% if paginator.next_page %}
     <a href="{{ paginator.next_page_path }}" class="next">Next</a>
-  {% else %}
+    {% else %}
     <b class="next ">Next</b>
-  {% endif %}
-</p>
+    {% endif %}
+  </p>
 </div>
