--- a/knowledge-centre/general-massage-therapy/index.html
+++ b/knowledge-centre/general-massage-therapy/index.html
@@ -8,7 +8,7 @@ excerpt_separator: What is Deep Tissue Massage? Trigger Points and Trigger Point
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy 
 ---
 {% for post in site.posts %}
-    {% if post.layout != "redirect" %}
+  {% if post.layout != "redirect" and post.post_id != 318 %}
   	{% if post.category == "generalmassagetherapy" %}
   		<p>
   			<h1>{{ post.title }}</h1>
