--- a/knowledge-centre/rock-climbing/index.html
+++ b/knowledge-centre/rock-climbing/index.html
@@ -13,7 +13,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 		<p>
 			<h1>{{ post.title }}</h1>
 			<div class="date">{{ post.date | date_to_string }}</div>
-			{{ post.excerpt }} ...<a title="Read More" href="{{ post.url }}">read more...</a>
+			{{ post.excerpt }} ...<a title="Read More" href="{{site.url}}{{ post.url }}">read more...</a>
 		</p>
 	  {% endif %}
 	{% endif %}
@@ -26,7 +26,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 	    <span class="date">{{ page.date | date_to_string }}</span>
 	  </p> -->
 	  <div class="content">
-	  	<p>I started rock climbing in 1997 when I was 21 years old. I started <a href="http://www.grandriverrocks.com/Pages/Home.aspx">climbing in the gym </a>before I ventured outside top-roping and sport climbing a year later. Now I’m a dad, a husband, and a <a href="{{site.url}}/">massage therapist, </a>but I still love to climb and I plan to climb for the rest of my life....<a title="Read More" href="{{ post.url }}">read more...</a></p>
+	  	<p>I started rock climbing in 1997 when I was 21 years old. I started <a href="http://www.grandriverrocks.com/Pages/Home.aspx">climbing in the gym </a>before I ventured outside top-roping and sport climbing a year later. Now I’m a dad, a husband, and a <a href="{{site.url}}/">massage therapist, </a>but I still love to climb and I plan to climb for the rest of my life....<a title="Read More" href="{{site.url}}{{ post.url }}">read more...</a></p>
 	  </div>
   {% endif %}
 {% endfor %}
