--- a/about/testimonials/index.html
+++ b/about/testimonials/index.html
@@ -25,7 +25,7 @@ Discovering deep tissue massage gives me hope. Jeremy's deep tissue massage brea
 <div class="quotetop">
 <div class="quotebottom">
 <p style="padding-bottom: 0px;"><strong>by Andrew - Professional Football Player</strong>
-"As a professional football player, taking care of my body is my number one priority and Jeremy has helped me to not only rehab from injuries but also keep me ready to perform at the highest level all season long"</p>
+"As a professional football player, taking care of my body is my number one priority and Jeremy has helped me to not only rehab from injuries but also keep me ready to perform at the highest level all season long."</p>
 
 </div>
 </div>
