pages working, sticky header borken

--- a/index.html
+++ b/index.html
@@ -1,24 +1,93 @@
 ---
-layout: page
+layout: home_page
 title: "Registered Massage Therapy in Kitchener"
 post_id: 75
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy
 excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Massage and Trigger Point Release Therapy.
 ---
-<h1>Kitchener Massage Therapy</h1>
-<p>Specializing in <a href="{{site.baseurl}}/generalmassagetherapy/what-is-deep-tissue-massage">Deep Tissue Massage </a>and<a href="{{site.baseurl}}/generalmassagetherapy/trigger-points-and-trigger-point-therapy"> Trigger Point Release Therapy </a>to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</p>
-<div class="testimonialbox">
-  <div class="testimonialinner">
-    <div class="quotetop">
-      <div class="quotebottom">
-        <p style="padding-bottom: 0px;"><strong>by Carrie - Technical Writer</strong>
-          I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. Deep tissue massage treatment is nothing like a relaxing day at a spa, but it is precisely what I need... <a title="Testimonials" href="{{site.baseurl}}/about/testimonials">Read more</a></p>
+<!-- Content
+============================================= -->
+<section id="content" style="overflow: visible;">
 
+<!-- What is Deep Tissue... -->
+<div class="content-wrap notoppadding" >
+  <div class="container clearfix">
+    <div id="section-features" class="heading-block title-center page-section nobottommargin topmargin toppadding">
+      <h1>What is Deep Tissue Massage?</h1>
+      <span>Deep Tissue massage is similar to the most common type of massage, Swedish massage, in that your therapist uses long, smooth, and kneading strokes to achieve healing changes in the body. The two forms of massage differ in that <a title="Discomfort of deep tissue massage" href="{{site.baseurl}}/generalmassagetherapy/does-deep-tissue-massage-heart">Deep Tissue massage aims to affect the deeper structures of the body </a>and have a deeper level of healing. Deep Tissue massage is very effective in treating chronic muscle and connective tissue injuries.</span>
+    </div>
+    <div class="clear"></div>
+  </div>
+</div>
+<!-- End What is Deep Tissue... --> 
+
+
+<!-- Testimonials -->
+<div class="row">
+  {% include home_page_testimonials.html %}
+</div>
+<!-- End Testimonials -->
+
+
+<!-- What is Deep Tissue... -->
+<div class="content-wrap notoppadding" >
+  <div class="container clearfix">
+    
+    <div id="section-features" class="title-center nobottommargin topmargin toppadding">
+      <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/"><h1>What Can Deep Tissue Massage Treat?</h1></a>
+    </div>
+    <div class="col_one_third">
+      <div class="feature-box fbox-border fbox-effect">
+        <div class="fbox-icon">
+          <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/#"><i class="icon-hand-right i-alt"></i></a>
         </div>
+        <h3>Back Pain</h3>
+        <ul class="iconlist iconlist-color nobottommargin">
+          <li><i class="icon-caret-right"></i> Degenerative Discs</li>
+          <li><i class="icon-caret-right"></i> Herniated Disc</li>
+          <li><i class="icon-caret-right"></i> Low Back Pain</li>
+          <li><i class="icon-caret-right"></i> Postural Disorders</li>
+        </ul>
       </div>
     </div>
-  </div>
 
-  <h2>What is Deep Tissue Massage?</h2>
-  <p>Deep Tissue massage is similar to the most common type of massage, Swedish massage, in that your therapist uses long, smooth, and kneading strokes to achieve healing changes in the body. The two forms of massage differ in that <a title="Discomfort of deep tissue massage" href="{{site.baseurl}}/generalmassagetherapy/does-deep-tissue-massage-heart">Deep Tissue massage aims to affect the deeper structures of the body </a>and have a deeper level of healing. Deep Tissue massage is very effective in treating chronic muscle and connective tissue injuries. <a href="{{site.baseurl}}/generalmassagetherapy/what-is-deep-tissue-massage">Read more...</a><a title="What is Deep Tissue Massage?" href="{{site.baseurl}}/generalmassagetherapy/what-is-deep-tissue-massage">
-  </a></p>
+    <div class="col_one_third">
+      <div class="feature-box fbox-border fbox-effect">
+        <div class="fbox-icon">
+          <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/#"><i class="icon-dribbble2 i-alt"></i></a>
+        </div>
+        <h3>Sports Injuries</h3>
+        <ul class="iconlist iconlist-color nobottommargin">
+          <li><i class="icon-caret-right"></i> Sprains and Strains</li>
+          <li><i class="icon-caret-right"></i> Tendonitis</li>
+          <li><i class="icon-caret-right"></i> Frozen shoulder</li>
+          <li><i class="icon-caret-right"></i> Knee injury</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="col_one_third col_last">
+      <div class="feature-box fbox-border fbox-effect">
+        <div class="fbox-icon">
+          <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/#"><i class="icon-reorder i-alt"></i></a>
+        </div>
+        <h3>So Much More</h3>
+        <ul class="iconlist iconlist-color nobottommargin">
+          <li><i class="icon-caret-right"></i> Arthritis</li>
+          <li><i class="icon-caret-right"></i> Carpal Tunnel Syndrome</li>
+          <li><i class="icon-caret-right"></i> Headaches</li>
+          <li><i class="icon-caret-right"></i> Neck pain</li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+  <div class="clear"></div>
+</div>
+<!-- End What is Deep Tissue... --> 
+
+
+<div class="clear"></div>  
+
+</section>
+<!-- #content end -->
