about, leftcol, working on testimonials

--- a/about/testimonials/index.html
+++ b/about/testimonials/index.html
@@ -16,9 +16,28 @@ I walked out of my first treatment with Jeremy impressed that he did exactly wha
 A childhood bicycle collision injured my cervical spine. I have bone spurs on two of my neck vertebrae and that injury forever changed the way my spine works. Over the years, my body has learned to adapt by creating knots of painful, rigid tissues in my muscles, tendons, and ligaments. These knots limit my range of motion, reduce circulation, increase inflammation, and cause chronic pain. Years of chronic pain drove me from the things I love: hiking, long walks, swimming, aerobics, and my daily fitness routine. Chronic pain left me feeling defeated.
 Discovering deep tissue massage gives me hope. Jeremy's deep tissue massage breaks down my knots to restore normal movement. I won't lie - the treatment is painful, but the days and weeks of mobility are worth every minute. With Jeremy's deep tissue massage treatments, aftercare suggestions, and<a title="General Guidelines for Stretching" href="{{site.url}}/stretching/general-guidelines-for-stretching"> stretches</a>, I can enjoy fitness again and I feel empowered because chronic pain doesn't run my life anymore. I do.</p>
 
+
+
 </div>
 </div>
 </div>
+</div>
+
+<div class="testimonial">
+	<div class="testi-image">
+		<img style="border-radius: 0%;" src="assets/images/img_comatop.gif" alt="Customer Testimonails">
+	</div>
+	<div class="testi-content">
+		<p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. <a title="What is Deep Tissue Massage?" href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">Deep tissue massage</a> treatment is nothing like a relaxing day at a spa, but it is precisely what I need to stay active. I return to Jeremy often to remain limber, flexible, and mobile.
+			A childhood bicycle collision injured my cervical spine. I have bone spurs on two of my neck vertebrae and that injury forever changed the way my spine works. Over the years, my body has learned to adapt by creating knots of painful, rigid tissues in my muscles, tendons, and ligaments. These knots limit my range of motion, reduce circulation, increase inflammation, and cause chronic pain. Years of chronic pain drove me from the things I love: hiking, long walks, swimming, aerobics, and my daily fitness routine. Chronic pain left me feeling defeated.
+			Discovering deep tissue massage gives me hope. Jeremy's deep tissue massage breaks down my knots to restore normal movement. I won't lie - the treatment is painful, but the days and weeks of mobility are worth every minute. With Jeremy's deep tissue massage treatments, aftercare suggestions, and<a title="General Guidelines for Stretching" href="{{site.url}}/stretching/general-guidelines-for-stretching"> stretches</a>, I can enjoy fitness again and I feel empowered because chronic pain doesn't run my life anymore. I do.</p>
+
+			<div class="testi-meta">
+				Carrie
+				<span style="color: red">Technical Writer</span>
+			</div>
+		</div>
+	</div>
 </div>
 <div class="testimonialbox">
 <div class="testimonialinner">
