--- a/clinic-information/index.html
+++ b/clinic-information/index.html
@@ -6,6 +6,7 @@ post_id: 7
 excerpt_separator: Book your Massage Therapy appointment online with a Kitchener massage therapist.
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, Massage appointment, massage therapy appointment, registered massage therapy appointment, book online
 ---
+<!-- Left Col -->
 <div class="col_one_third noleftmargin slider-caption-bg slider-caption-bg-light">
 	
 	<p>One of the easiest ways for you to make an appointment with me at the clinic is to book one online! All you need to do is enter your name, date of birth and contact information then pick a time and day, in my scheduling service Cliniko. Scheduling an appointment online is fast, efficient, and easy.</p>
@@ -18,11 +19,12 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 	<p>You will receive an email confirmation of your appointment. If you don’t – please try rebooking or contact me directly .
 	If you do not want to book online, please feel free to call me to book an appointment. Sometimes, if you are lucky, you might be able to get a last-minute appointment , or I may have additional time slots open that the scheduling tool doesn't.</p>
 	
-
-
 </div>
+<!-- Left Col Ends -->
 
+<!-- Right Col -->
 <div class="col_two_third norightmargin col_last slider-caption-bg slider-caption-bg-light">
+  
   <iframe src="https://kwmassage.cliniko.com/bookings?embedded=true" frameborder="0" scrolling="auto" width="100%" height="750px"></iframe>
   <p><b>Please Note:</b></p>
 	<ul class="blue">
@@ -30,4 +32,6 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 		<li>24 hours’ notice is necessary to cancel an appointment and all missed appointments must be paid for.</li>
 		<li>There is no access to debit or credit in the <a title="clinic" href="{{site.url}}/clinic-information/clinic">clinic</a>, please bring cash or Cheques only.</li>
 	</ul>
+	
 </div>
+<!-- Left Col Ends -->
