--- a/clinic-information/index.html
+++ b/clinic-information/index.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: page_no_leftcol
 title: "Appointments"
 slug: clinic-information
 post_id: 7
@@ -26,12 +26,14 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 <div class="col_two_third norightmargin col_last slider-caption-bg slider-caption-bg-light">
   
   <iframe src="https://kwmassage.cliniko.com/bookings?embedded=true" frameborder="0" scrolling="auto" width="100%" height="750px"></iframe>
-  <p><b>Please Note:</b></p>
-	<ul class="blue">
-		<li>an appointment is required in advance</li>
-		<li>24 hours’ notice is necessary to cancel an appointment and all missed appointments must be paid for.</li>
-		<li>There is no access to debit or credit in the <a title="clinic" href="{{site.url}}/clinic-information/clinic">clinic</a>, please bring cash or Cheques only.</li>
-	</ul>
-	
+  	<div class="leftmargin">
+	  	<p><b>Please Note:</b>
+		<ul class="blue">
+			<li>an appointment is required in advance</li>
+			<li>24 hours’ notice is necessary to cancel an appointment and all missed appointments must be paid for.</li>
+			<li>There is no access to debit or credit in the <a title="clinic" href="{{site.url}}/clinic-information/clinic">clinic</a>, please bring cash or Cheques only.</li>
+		</ul>
+		</p>
+	</div>
 </div>
 <!-- Left Col Ends -->
