--- a/about/welcome/index.html
+++ b/about/welcome/index.html
@@ -7,24 +7,21 @@ post_id: 75
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy
 excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Massage and Trigger Point Release Therapy.
 ---
-<h1>Kitchener Massage Therapy</h1>
+<h2>Kitchener Massage Therapy</h2>
 <p>Specializing in <a href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">Deep Tissue Massage </a>and<a href="{{site.url}}/generalmassagetherapy/trigger-points-and-trigger-point-therapy"> Trigger Point Release Therapy </a>to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</p>
-<div class="testimonialbox">
-<div class="testimonialinner">
-<div class="quotetop">
-<div class="quotebottom">
-<p style="padding-bottom: 0px;"><strong>by Carrie - Technical Writer</strong>
-I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. Deep tissue massage treatment is nothing like a relaxing day at a spa, but it is precisely what I need... <a title="Testimonials" href="{{site.url}}/about/testimonials">Read more</a></p>
+<div class="testimonial">
+	<div class="testi-image">
+		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+	</div>
+	<div class="testi-content">
+		<p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. Deep tissue massage treatment is nothing like a relaxing day at a spa, but it is precisely what I need... <a title="Testimonials" href="{{site.url}}/about/testimonials">Read more</a></p>
+		<div class="testi-meta">
+			Carrie
+			<div id="testi-span">Technical Writer</div>
+		</div>
+	</div>
+</div>
 
-</div>
-</div>
-</div>
-</div>
-<div class="clear">
-
-<b> </b>
-
-</div>
 <h2>What is Deep Tissue Massage?</h2>
 <p>Deep Tissue massage is similar to the most common type of massage, Swedish massage, in that your therapist uses long, smooth, and kneading strokes to achieve healing changes in the body. The two forms of massage differ in that <a title="Discomfort of deep tissue massage" href="{{site.url}}/generalmassagetherapy/does-deep-tissue-massage-heart">Deep Tissue massage aims to affect the deeper structures of the body </a>and have a deeper level of healing. Deep Tissue massage is very effective in treating chronic muscle and connective tissue injuries. <a href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">Read more...</a><a title="What is Deep Tissue Massage?" href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">
 </a>
