--- a/clinic-information/note-to-new-massage-therapy-clients/index.html
+++ b/clinic-information/note-to-new-massage-therapy-clients/index.html
@@ -7,7 +7,6 @@ post_id: 224
 excerpt_separator: What you need to know when you come in for your first massage therapy appointment at KWmassage.
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, New massage therapy clients
 ---
-<h1>Note to New Massage Therapy Clients</h1>
 <p>When you come in for your first <a href="{{site.url}}/clinic-information">massage therapy appointment </a>at <a href="{{site.url}}/">KW massage </a>, a few things need to be done in preparation for your <a href="{{site.url}}/">massage therapy treatment</a>.</p>
 
 <p>First, I do not charge an initial consultation fee. What you pay depends on the length of treatment you request when you book the appointment. I do not charge any additional fees.</p>
@@ -16,7 +15,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <p>This health history form  gives me a general overview of your state of health so that we can be sure there is no risk to the treatment plan I create for you. Once I have gone over your treatment plan, we will have a short discussion about what it is you want me to treat. I try not to take up more than a few minutes with this stage but it is important for me to have a clear picture of what we will be working on before we get started. I commonly ask questions like:</p>
 
-<ul class="blue">
+<ul class="leftmargin">
 	<li>where does it hurt?</li>
 	<li>what does the pain feel like?</li>
 	<li>what sort of things aggravate the injury?</li>
@@ -29,7 +28,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <p>Most of my clients are comfortable removing all their clothing but their underpants knowing that I will always make sure they are covered discreetly with a sheet. I only expose one part of your body at a time, and only the specific body part I will be working on.</p>
 
-<p>During your treatment, I will be using an assortment of massage techniques. Some of these can be relaxing and others can be <a href="{{site.url}}/deleteme/what-is-deep-tissue-massage">kind of tender</a>. In most cases, <a href="{{site.url}}/generalmassagetherapy/does-deep-tissue-massage-heart">a little pain is necessary </a>to get the results you are looking for from a massage therapy treatment.</p>
+<p>During your treatment, I will be using an assortment of massage techniques. Some of these can be relaxing and others can be <a href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">kind of tender</a>. In most cases, <a href="{{site.url}}/generalmassagetherapy/does-deep-tissue-massage-heart">a little pain is necessary </a>to get the results you are looking for from a massage therapy treatment.</p>
 
 <p>It’s important that you be able to rate your discomfort on a scale of 1 to 10, where 10 is the most pain you’ve ever experienced. A discomfort level of 7 or under can be appropriate depending on the injury or need, but any more than that won’t bring you healing benefits. If, at any time during your treatment, your discomfort level becomes intolerable, please speak up. You may find that some areas of the body are more sensitive than others, or that your sensitivity changes day to day. Feel free to let me know how you’re doing. It’s entirely okay to ask me to adjust my pressure and technique at any time during your treatment.</p>
 
