--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,6 @@ post_id: 21
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener, registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, 
 excerpt_separator: The quickest way to book an appointment with me is to book a treatment online or get in touch with me directly to make a massage therapy appointment.
 ---
-<h1>Contact</h1>
 <p>The quickest way to book an appointment with me is to <a href="{{site.url}}/clinic-information">book a treatment online</a>.</p>
 
 <p>To get in touch with me directly to make a <a title="Book Massage Therapy Appointment Online" href="{{site.url}}/clinic-information">massage therapy appointment </a>in Kitchener/Waterloo, you can call me, send me an email or text message. You can also use the Contact Form below to send me a message.</p>
@@ -16,4 +15,37 @@ Kitchener, ON</br>
 (519) 745-4112</br>
 <a href="mailto:Jeremy@kwmassage.com">Jeremy@kwmassage.com</a></b></p>
 
-<iframe src="https://mapsengine.google.com/map/embed?mid=z1kzsRant038.kwaZ-HV4FUfg" height="400" width="550"></iframe>
+<section id="google-map" class="gmap" style="height: 410px;"></section>
+
+						<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+						<script type="text/javascript" src="/js/jquery.gmap.js"></script>
+
+						<script type="text/javascript">
+
+							jQuery('#google-map').gMap({
+
+							    latitude: 43.4539720,
+							    longitude: -80.4806040,
+								maptype: 'ROADMAP',
+								zoom: 14,
+								markers: [
+									{
+										latitude: 43.4539720,
+							    		longitude: -80.4806040,
+										html: '<div style="width: 300px;"><h4 style="margin-bottom: 8px;">KWmassage</h4><i>Kitchener Massage Therapy</i><p class="nobottommargin">Specializing in Deep Tissue Massage and Trigger Point Release Therapy to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</p></div>',
+
+									}
+								],
+								doubleclickzoom: false,
+								controls: {
+									panControl: true,
+									zoomControl: true,
+									mapTypeControl: true,
+									scaleControl: true,
+									streetViewControl: false,
+									overviewMapControl: false
+								}
+
+							});
+
+						</script>
