--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 <section id="content" style="overflow: visible;">
 
 <!-- What is Deep Tissue... -->
+<div class="content-wrap notoppadding hidden-lg hidden-md hidden-sm" >
+  <div class="container clearfix">
+    <div id="section-features" class="heading-block title-center page-section nobottommargin topmargin toppadding">
+      <h1>Kitchener Massage Therapy</h1>
+      <span>Specializing in Deep Tissue Massage and Trigger Point Release Therapy to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</span>
+    </div>
+    <div class="clear"></div>
+  </div>
+</div>
+<!-- End What is Deep Tissue... --> 
+
+<!-- Picture -->
+<div class="center notopmargin hidden-lg hidden-md hidden-sm">
+  <a href="http://youtube/XSRrvEXZSdk" data-lightbox="iframe">
+    <img src="{{site.url}}/assets/images/img_video.png">.
+  </a>
+</div>
+<!-- Picture -->
+
+<!-- What is Deep Tissue... -->
 <div class="content-wrap notoppadding" >
   <div class="container clearfix">
     <div id="section-features" class="heading-block title-center page-section nobottommargin topmargin toppadding">
@@ -86,7 +106,18 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 </div>
 <!-- End What is Deep Tissue... --> 
 
-
+<div class="content-wrap notoppadding hidden-lg hidden-md hidden-sm" >
+  <div class="container clearfix">
+    <div id="section-features" class="heading-block">
+<div class="notopmargin hidden-lg hidden-md hidden-sm" >
+  <h2>Hours</h2>
+  {% include timebox.html %}
+  <h2>Rates</h2>
+  {% include ratebox.html %}
+</div>
+</div>
+</div>
+</div>
 <div class="clear"></div>  
 
 </section>
