--- a/contact/index.html
+++ b/contact/index.html
@@ -18,7 +18,7 @@ Kitchener, ON</br>
 <section id="google-map" class="gmap" style="height: 410px;"></section>
 
 						<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-						<script type="text/javascript" src="/js/jquery.gmap.js"></script>
+						<script type="text/javascript" src="{{site.url}}/js/jquery.gmap.js"></script>
 
 						<script type="text/javascript">
 
