kw-stage, page-background working

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 <!-- Picture -->
 <div class="center notopmargin hidden-lg hidden-md hidden-sm">
   <a href="http://youtube/XSRrvEXZSdk" data-lightbox="iframe">
-    <img src="{{site.url}}/assets/images/img_video.png">.
+    <img src="{{site.url}}/assets/images/picture_kitchener_massage_therapist.png">
   </a>
 </div>
 <!-- Picture -->
