exp with home page icons

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
     <div class="col_one_third">
       <div class="feature-box fbox-border fbox-effect">
         <div class="fbox-icon">
-          <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/#"><i class="icon-hand-right i-alt"></i></a>
+          <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/#"><img src="{{site.url}}/assets/images/icon_arrow.png"></a>
         </div>
         <h3>Back Pain</h3>
         <ul class="iconlist iconlist-color nobottommargin">
