--- a/clinic-information/clinic/index.html
+++ b/clinic-information/clinic/index.html
@@ -29,9 +29,9 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 							<div class="fslider" data-arrows="false" data-lightbox="gallery">
 								<div class="flexslider">
 									<div class="slider-wrap">
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_clinic_exterior_1.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_clinic_exterior_1.jpg" alt="Standard Post with Gallery"></a></div>
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_clinic_exterior_2.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_clinic_exterior_2.jpg" alt="Standard Post with Gallery"></a></div>
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_clinic_exterior_3.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_clinic_exterior_3.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_exterior_1.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_exterior_1.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_exterior_2.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_exterior_2.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_exterior_3.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_exterior_3.jpg" alt="Standard Post with Gallery"></a></div>
 									</div>
 								</div>
 							</div>
@@ -54,11 +54,11 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 							<div class="fslider" data-arrows="false" data-lightbox="gallery">
 								<div class="flexslider">
 									<div class="slider-wrap">
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_clinic_interior_1.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_clinic_interior_1.jpg" alt="Standard Post with Gallery"></a></div>
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_clinic_interior_2.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_clinic_interior_2.jpg" alt="Standard Post with Gallery"></a></div>
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_clinic_interior_3.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_clinic_interior_3.jpg" alt="Standard Post with Gallery"></a></div>
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_clinic_interior_4.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_clinic_interior_4.jpg" alt="Standard Post with Gallery"></a></div>
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_clinic_interior_5.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_clinic_interior_5.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_interior_1.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_interior_1.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_interior_2.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_interior_2.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_interior_3.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_interior_3.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_interior_4.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_interior_4.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_interior_5.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_clinic_interior_5.jpg" alt="Standard Post with Gallery"></a></div>
 									</div>
 								</div>
 							</div>
@@ -82,11 +82,11 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 							<div class="fslider" data-arrows="false" data-lightbox="gallery">
 								<div class="flexslider">
 									<div class="slider-wrap">
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_table_1.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_table_1.jpg" alt="Standard Post with Gallery"></a></div>
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_table_2.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_table_2.jpg" alt="Standard Post with Gallery"></a></div>
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_table_3.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_table_3.jpg" alt="Standard Post with Gallery"></a></div>
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_table_4.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_table_4.jpg" alt="Standard Post with Gallery"></a></div>
-										<div class="slide"><a href="/assets/images/clinic_pictures/massage_therapy_table_5.jpg" data-lightbox="gallery-item"><img class="image_fade" src="/assets/images/clinic_pictures/massage_therapy_table_5.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_table_1.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_table_1.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_table_2.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_table_2.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_table_3.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_table_3.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_table_4.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_table_4.jpg" alt="Standard Post with Gallery"></a></div>
+										<div class="slide"><a href="{{site.url}}/assets/images/clinic_pictures/massage_therapy_table_5.jpg" data-lightbox="gallery-item"><img class="image_fade" src="{{site.url}}/assets/images/clinic_pictures/massage_therapy_table_5.jpg" alt="Standard Post with Gallery"></a></div>
 									</div>
 								</div>
 							</div>
