working with page bg image xs

--- a/about/testimonials/index.html
+++ b/about/testimonials/index.html
@@ -21,7 +21,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 				============================================= -->
 				<div id="posts" class="post-grid grid-2 clearfix">
 
-					<div class="entry clearfix" data-class-lg="" data-class-md="" data-class-sm="" data-class-xs="" data-class-xxs="">
+					<div class="entry clearfix" data-class-lg="" data-class-md="" data-class-sm="leftmargin-lg" data-class-xs="" data-class-xxs="">
 						<div class="entry-image divcenter" >
 							<iframe width="560" height="315" src="//www.youtube.com/embed/oKya2ymtKYc?rel=0" frameborder="0" allowfullscreen></iframe>
 						</div>
@@ -31,7 +31,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 						</div>
 					</div>
 
-					<div class="entry clearfix" data-class-lg="" data-class-md="" data-class-sm="" data-class-xs="" data-class-xxs="">
+					<div class="entry clearfix" data-class-lg="" data-class-md="" data-class-sm="leftmargin-lg" data-class-xs="" data-class-xxs="">
 						<div class="entry-image divcenter">
 							<iframe width="560" height="315" src="//www.youtube.com/embed/RC_Ao0gda3k?rel=0" frameborder="0" allowfullscreen></iframe>
 						</div>
