--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 
 <!-- Picture -->
 <div class="center notopmargin hidden-lg hidden-md hidden-sm">
-  <a href="http://youtube/XSRrvEXZSdk" data-lightbox="iframe">
+  <a href="https://www.youtube.com/watch?v=XSRrvEXZSdk" data-lightbox="iframe">
     <img src="{{site.url}}/assets/images/picture_kitchener_massage_therapist.png">
   </a>
 </div>
