--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 <section id="content" style="overflow: visible;">
 
 <!-- What is Deep Tissue... -->
-<div class="content-wrap notoppadding hidden-lg hidden-md hidden-sm" >
+<div class="content-wrap notoppadding bottommargin hidden-lg hidden-md hidden-sm" >
   <div class="container clearfix">
     <div id="section-features" class="heading-block title-center page-section nobottommargin topmargin toppadding">
       <h1>Kitchener Massage Therapy</h1>
@@ -22,7 +22,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 <!-- End What is Deep Tissue... --> 
 
 <!-- Picture -->
-<div class="center notopmargin hidden-lg hidden-md hidden-sm">
+<div class="center notopmargin bottommargin hidden-lg hidden-md hidden-sm">
   <a href="https://www.youtube.com/watch?v=XSRrvEXZSdk" data-lightbox="iframe">
     <img src="{{site.url}}/assets/images/picture_kitchener_massage_therapist.png">
   </a>
@@ -32,7 +32,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 <!-- What is Deep Tissue... -->
 <div class="content-wrap notoppadding" >
   <div class="container clearfix">
-    <div id="section-features" class="heading-block title-center page-section nobottommargin topmargin toppadding">
+    <div id="section-features" class="heading-block title-center page-section nobottommargin toppadding">
       <h1>What is Deep Tissue Massage?</h1>
       <span>Deep Tissue massage is similar to the most common type of massage, Swedish massage, in that your therapist uses long, smooth, and kneading strokes to achieve healing changes in the body. The two forms of massage differ in that <a title="Discomfort of deep tissue massage" href="{{site.baseurl}}/generalmassagetherapy/does-deep-tissue-massage-heart">Deep Tissue massage aims to affect the deeper structures of the body </a>and have a deeper level of healing. Deep Tissue massage is very effective in treating chronic muscle and connective tissue injuries.</span>
     </div>
