--- a/about/testimonials/index.html
+++ b/about/testimonials/index.html
@@ -24,7 +24,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 					<div class="entry clearfix" data-class-lg="" data-class-md="" data-class-sm="leftmargin-lg" data-class-xs="" data-class-xxs="">
 						<div class="entry-image divcenter" >
 							<a href="https://www.youtube.com/watch?v=oKya2ymtKYc" data-lightbox="iframe">
-				                <img src="https://img.youtube.com/vi/oKya2ymtKYc/0.jpg" frameborder="0">
+				                <img src="https://img.youtube.com/vi/oKya2ymtKYc/0.jpg" alt="Massage Therapist Testimonial, Web Develoment">
 				            </a>
 						</div>
 						<div class="entry-title topmargin testi-meta leftmargin-sm">
@@ -36,7 +36,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 					<div class="entry clearfix" data-class-lg="" data-class-md="" data-class-sm="leftmargin-lg" data-class-xs="" data-class-xxs="">
 						<div class="entry-image divcenter">
 			                <a href="https://www.youtube.com/watch?v=RC_Ao0gda3k" data-lightbox="iframe">
-				                <img src="https://img.youtube.com/vi/RC_Ao0gda3k/0.jpg" frameborder="0">
+				                <img src="https://img.youtube.com/vi/RC_Ao0gda3k/0.jpg" alt="Massage Therapist Testimonial, Rock Climber">
 				            </a>
 						</div>
 						
