--- a/contact/index.html
+++ b/contact/index.html
@@ -10,9 +10,9 @@ excerpt_separator: The quickest way to book an appointment with me is to book a 
 
 <p>To get in touch with me directly to make a <a title="Book Massage Therapy Appointment Online" href="{{site.url}}/clinic-information">massage therapy appointment </a>in Kitchener/Waterloo, you can call me, send me an email or text message. You can also use the Contact Form below to send me a message.</p>
 
-<p><b>229 Frederick Street</br>
-Kitchener, ON</br>
-(519) 745-4112</br>
+<p><b>229 Frederick Street<br />
+Kitchener, ON<br />
+(519) 745-4112<br />
 <a href="mailto:Jeremy@kwmassage.com">Jeremy@kwmassage.com</a></b></p>
 
 <section id="google-map" class="gmap" style="height: 410px;"></section>
