--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 <!-- What is Deep Tissue... -->
 <div class="content-wrap notoppadding bottommargin hidden-lg hidden-md hidden-sm" >
   <div class="container clearfix">
-    <div id="section-features" class="heading-block title-center page-section nobottommargin topmargin toppadding">
+    <div class="heading-block title-center page-section nobottommargin topmargin toppadding">
       <h1>Kitchener Massage Therapy</h1>
       <span>Specializing in Deep Tissue Massage and Trigger Point Release Therapy to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</span>
     </div>
@@ -24,7 +24,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 <!-- Picture -->
 <div class="center notopmargin bottommargin hidden-lg hidden-md hidden-sm">
   <a href="https://www.youtube.com/watch?v=XSRrvEXZSdk" data-lightbox="iframe">
-    <img src="{{site.url}}/assets/images/picture_kitchener_massage_therapist.png">
+    <img src="{{site.url}}/assets/images/picture_kitchener_massage_therapist.png" alt="Jeremy Bissonnette, Registered Massage Therapist">
   </a>
 </div>
 <!-- Picture -->
@@ -32,7 +32,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 <!-- What is Deep Tissue... -->
 <div class="content-wrap notoppadding" >
   <div class="container clearfix">
-    <div id="section-features" class="heading-block title-center page-section nobottommargin toppadding">
+    <div class="heading-block title-center page-section nobottommargin toppadding">
       <h1>What is Deep Tissue Massage?</h1>
       <span>Deep Tissue massage is similar to the most common type of massage, Swedish massage, in that your therapist uses long, smooth, and kneading strokes to achieve healing changes in the body. The two forms of massage differ in that <a title="Discomfort of deep tissue massage" href="{{site.baseurl}}/generalmassagetherapy/does-deep-tissue-massage-heart">Deep Tissue massage aims to affect the deeper structures of the body </a>and have a deeper level of healing. Deep Tissue massage is very effective in treating chronic muscle and connective tissue injuries.</span>
     </div>
@@ -49,17 +49,17 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 <!-- End Testimonials -->
 
 
-<!-- What is Deep Tissue... -->
+<!-- What can deep tissue treat... -->
 <div class="content-wrap notoppadding" >
   <div class="container clearfix">
     
-    <div id="section-features" class="title-center nobottommargin topmargin toppadding">
+    <div class="title-center nobottommargin topmargin toppadding">
       <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/"><h1>What Can Deep Tissue Massage Treat?</h1></a>
     </div>
     <div class="col_one_third">
       <div class="feature-box fbox-border fbox-effect">
         <div class="fbox-icon">
-          <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/#"><i><img src="{{site.url}}/assets/images/back_pain_icon.png"></i></a>
+          <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/#"><i><img src="{{site.url}}/assets/images/back_pain_icon.png" alt="Back Pain icon"></i></a>
         </div>
         <h3>Back Pain</h3>
         <ul class="iconlist iconlist-color nobottommargin">
@@ -108,13 +108,13 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 
 <div class="content-wrap notoppadding hidden-lg hidden-md hidden-sm" >
   <div class="container clearfix">
-    <div id="section-features" class="heading-block">
+    <div class="heading-block">
       <div class="notopmargin hidden-lg hidden-md hidden-sm" >
 
         {% include timebox.html %}
 
         {% include ratebox.html %}
-        <a href="{{site.baseurl}}/clinic-information" title="Schedule Massage Therapy Appointment Now"><button class="btn btn-danger fright nomargin">Schedule Now</button></a>
+        <a href="{{site.baseurl}}/clinic-information" title="Schedule Massage Therapy Appointment Now" class="btn btn-danger fright nomargin">Schedule Now</a>
       </div>
     </div>
   </div>
