--- a/about/testimonials/index.html
+++ b/about/testimonials/index.html
@@ -56,7 +56,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-content">
-		<p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. <a title="What is Deep Tissue Massage?" href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">Deep tissue massage</a> treatment is nothing like a relaxing day at a spa, but it is precisely what I need to stay active. I return to Jeremy often to remain limber, flexible, and mobile. A childhood bicycle collision injured my cervical spine. I have bone spurs on two of my neck vertebrae and that injury forever changed the way my spine works. Over the years, my body has learned to adapt by creating knots of painful, rigid tissues in my muscles, tendons, and ligaments. These knots limit my range of motion, reduce circulation, increase inflammation, and cause chronic pain. Years of chronic pain drove me from the things I love: hiking, long walks, swimming, aerobics, and my daily fitness routine. Chronic pain left me feeling defeated.Discovering deep tissue massage gives me hope. Jeremy's deep tissue massage breaks down my knots to restore normal movement. I won't lie - the treatment is painful, but the days and weeks of mobility are worth every minute. With Jeremy's deep tissue massage treatments, aftercare suggestions, and<a title="General Guidelines for Stretching" href="{{site.url}}/stretching/general-guidelines-for-stretching"> stretches</a>, I can enjoy fitness again and I feel empowered because chronic pain doesn't run my life anymore. I do.</p>
+		<p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. <a title="What is Deep Tissue Massage?" href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage/index.html">Deep tissue massage</a> treatment is nothing like a relaxing day at a spa, but it is precisely what I need to stay active. I return to Jeremy often to remain limber, flexible, and mobile. A childhood bicycle collision injured my cervical spine. I have bone spurs on two of my neck vertebrae and that injury forever changed the way my spine works. Over the years, my body has learned to adapt by creating knots of painful, rigid tissues in my muscles, tendons, and ligaments. These knots limit my range of motion, reduce circulation, increase inflammation, and cause chronic pain. Years of chronic pain drove me from the things I love: hiking, long walks, swimming, aerobics, and my daily fitness routine. Chronic pain left me feeling defeated.Discovering deep tissue massage gives me hope. Jeremy's deep tissue massage breaks down my knots to restore normal movement. I won't lie - the treatment is painful, but the days and weeks of mobility are worth every minute. With Jeremy's deep tissue massage treatments, aftercare suggestions, and<a title="General Guidelines for Stretching" href="{{site.url}}/stretching/general-guidelines-for-stretching/index.html"> stretches</a>, I can enjoy fitness again and I feel empowered because chronic pain doesn't run my life anymore. I do.</p>
 		<div class="testi-meta">
 			Carrie
 			<div id="testi-span">Technical Writer</div>
@@ -77,7 +77,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-content">
-		<p>Before I came across Jeremy’s name online in my <a title="Google+, Kitchener Massage therapy" href="https://plus.google.com/+Kwmassage/posts?hl=en" target="_blank">google search…</a> I was stressed, over worked and literally carrying all that weight on my shoulders. I had been to massage therapy places before that felt really soothing and calming, but I had real pain that I needed relieved. So I looked into deep tissue therapy and thought I’d give it a try to finally take some of the pain away. The first time was <a title="Does Deep Tissue Massage Hurt?" href="{{site.url}}/generalmassagetherapy/does-deep-tissue-massage-heart">PAINFUL!!</a> Like a good pain But I felt great! Jeremy asked me what my troubles were and showed me some stretches I could do at home to help inbetween sessions. Not only am I feeling better, but so is my wallet! Compared to other places I have tried, he is fair and reasonable. Jeremy is very easy to work with and I enjoy exchanging stories about family and adventure. Thanks Jeremy!</p>
+		<p>Before I came across Jeremy’s name online in my <a title="Google+, Kitchener Massage therapy" href="https://plus.google.com/+Kwmassage/posts?hl=en" target="_blank">google search…</a> I was stressed, over worked and literally carrying all that weight on my shoulders. I had been to massage therapy places before that felt really soothing and calming, but I had real pain that I needed relieved. So I looked into deep tissue therapy and thought I’d give it a try to finally take some of the pain away. The first time was <a title="Does Deep Tissue Massage Hurt?" href="{{site.url}}/generalmassagetherapy/does-deep-tissue-massage-heart/index.html">PAINFUL!!</a> Like a good pain But I felt great! Jeremy asked me what my troubles were and showed me some stretches I could do at home to help inbetween sessions. Not only am I feeling better, but so is my wallet! Compared to other places I have tried, he is fair and reasonable. Jeremy is very easy to work with and I enjoy exchanging stories about family and adventure. Thanks Jeremy!</p>
 		<div class="testi-meta">
 			Lidia
 			<div id="testi-span">Small Business Owner</div>
@@ -107,7 +107,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-content">
-		<p>I see Jeremy for deep tissue treatments to help with neck, shoulder, and back pain from sitting at a computer most of the day. He's <a title="About" href="{{site.url}}/about">personable and professiona</a>l, and his massages really help with my neck/shoulder/back pain. I'd strongly recommend seeing Jeremy if you're looking for a deep tissue massage.</p>
+		<p>I see Jeremy for deep tissue treatments to help with neck, shoulder, and back pain from sitting at a computer most of the day. He's <a title="About" href="{{site.url}}/about/index.html">personable and professiona</a>l, and his massages really help with my neck/shoulder/back pain. I'd strongly recommend seeing Jeremy if you're looking for a deep tissue massage.</p>
 		<div class="testi-meta">
 			K.T. (Kitchener)
 			<div id="testi-span">Mobile App Developer</div>
@@ -117,7 +117,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-content">
-		<p>I only have good things to say about <a title="Welcome" href="{{site.url}}/about/welcome">KW Massage</a>. Jeremy is very personable and easy to schedule appointments with. I used to get terrible tension headaches, but monthly appointments with Jeremy have made them all but disappear!</p>
+		<p>I only have good things to say about <a title="Welcome" href="{{site.url}}/index.html">KW Massage</a>. Jeremy is very personable and easy to schedule appointments with. I used to get terrible tension headaches, but monthly appointments with Jeremy have made them all but disappear!</p>
 		<div class="testi-meta">
 			SG (Kitchener)
 		</div>
@@ -126,7 +126,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-content">
-		<p>Getting deep tissue massage from Jeremy for the past 6 years has been an absolute life saver. Jeremy has been able to help me relieve many of my ailments and bodily pains. I competed in 2013 Jiu-Jitsu World Championships and Jeremy was one of the cornerstones of my coaching and therapy team. If you're looking to have long term results that last, I would highly recommend using Jeremy and KW Massage. He also has a <a title="Appointments" href="{{site.url}}/clinic-information">great website for booking appointments</a>, it's worth checking it out.</p>
+		<p>Getting deep tissue massage from Jeremy for the past 6 years has been an absolute life saver. Jeremy has been able to help me relieve many of my ailments and bodily pains. I competed in 2013 Jiu-Jitsu World Championships and Jeremy was one of the cornerstones of my coaching and therapy team. If you're looking to have long term results that last, I would highly recommend using Jeremy and KW Massage. He also has a <a title="Appointments" href="{{site.url}}/clinic-information/index.html">great website for booking appointments</a>, it's worth checking it out.</p>
 		<div class="testi-meta">
 			KOB (Kitchener)
 			<div id="testi-span">Web Development/Home Renovations)</div>
@@ -173,7 +173,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-content">
-		<p>I had been getting<a title="Tension Headaches" href="{{site.url}}/generalmassagetherapy/tension-headaches-3"> headaches</a> for years on and off. After a few treatments they went away. Deep tissue therapy is a little painful but well worth it.</p>
+		<p>I had been getting<a title="Tension Headaches" href="{{site.url}}/generalmassagetherapy/tension-headaches-3/index.html"> headaches</a> for years on and off. After a few treatments they went away. Deep tissue therapy is a little painful but well worth it.</p>
 		<div class="testi-meta">
 			A Google User
 		</div>
@@ -183,7 +183,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-content">
-		<p>Jeremy is the best massage therapist I have been to! I have had pain in my <a title="Low Back Pain" href="{{site.url}}/generalmassagetherapy/low-back-pain">mid-back for many years</a> and he is the only massage therapist who has actually made my back feel better and who has worked to correct the problems with my back. I would highly recommend him to anyone who wants long-lasting results!</p>
+		<p>Jeremy is the best massage therapist I have been to! I have had pain in my <a title="Low Back Pain" href="{{site.url}}/generalmassagetherapy/low-back-pain/index.html">mid-back for many years</a> and he is the only massage therapist who has actually made my back feel better and who has worked to correct the problems with my back. I would highly recommend him to anyone who wants long-lasting results!</p>
 		<div class="testi-meta">
 			A Google User
 		</div>
