--- a/clinic-information/index.html
+++ b/clinic-information/index.html
@@ -12,7 +12,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 	<ul class="blue">
 		<li>an appointment is required in advance</li>
 		<li>24 hours’ notice is necessary to cancel an appointment and all missed appointments must be paid for.</li>
-		<li>There is no access to debit or credit in the <a title="clinic" href="{{site.url}}/clinic-information/clinic">clinic</a>, please bring cash or Cheques only.</li>
+		<li>There is no access to debit or credit in the <a title="clinic" href="{{site.url}}/clinic-information/clinic/index.html">clinic</a>, please bring cash or Cheques only.</li>
 	</ul>
 	</p>
 </div>
