--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
   <div class="container clearfix">
     <div class="heading-block title-center page-section nobottommargin toppadding">
       <h1>What is Deep Tissue Massage?</h1>
-      <span>Deep Tissue massage is similar to the most common type of massage, Swedish massage, in that your therapist uses long, smooth, and kneading strokes to achieve healing changes in the body. The two forms of massage differ in that <a title="Discomfort of deep tissue massage" href="{{site.baseurl}}/generalmassagetherapy/does-deep-tissue-massage-heart">Deep Tissue massage aims to affect the deeper structures of the body </a>and have a deeper level of healing. Deep Tissue massage is very effective in treating chronic muscle and connective tissue injuries.</span>
+      <span>Deep Tissue massage is similar to the most common type of massage, Swedish massage, in that your therapist uses long, smooth, and kneading strokes to achieve healing changes in the body. The two forms of massage differ in that <a title="Discomfort of deep tissue massage" href="{{site.baseurl}}/generalmassagetherapy/does-deep-tissue-massage-heart/index.html">Deep Tissue massage aims to affect the deeper structures of the body </a>and have a deeper level of healing. Deep Tissue massage is very effective in treating chronic muscle and connective tissue injuries.</span>
     </div>
     <div class="clear"></div>
   </div>
@@ -54,12 +54,12 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
   <div class="container clearfix">
     
     <div class="title-center nobottommargin topmargin toppadding">
-      <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/"><h1>What Can Deep Tissue Massage Treat?</h1></a>
+      <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/index.html"><h1>What Can Deep Tissue Massage Treat?</h1></a>
     </div>
     <div class="col_one_third">
       <div class="feature-box fbox-border fbox-effect">
         <div class="fbox-icon">
-          <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/#"><i><img src="{{site.url}}/assets/images/back_pain_icon.png" alt="Back Pain icon"></i></a>
+          <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/index.html"><i><img src="{{site.url}}/assets/images/back_pain_icon.png" alt="Back Pain icon"></i></a>
         </div>
         <h3>Back Pain</h3>
         <ul class="iconlist iconlist-color nobottommargin">
@@ -89,7 +89,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
     <div class="col_one_third col_last">
       <div class="feature-box fbox-border fbox-effect">
         <div class="fbox-icon">
-          <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/#"><i class="icon-line2-list i-alt"></i></a>
+          <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/index.html"><i class="icon-line2-list i-alt"></i></a>
         </div>
         <h3>So Much More</h3>
         <ul class="iconlist iconlist-color nobottommargin">
@@ -114,7 +114,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
         {% include timebox.html %}
 
         {% include ratebox.html %}
-        <a href="{{site.baseurl}}/clinic-information" title="Schedule Massage Therapy Appointment Now" class="btn btn-danger fright nomargin">Schedule Now</a>
+        <a href="{{site.baseurl}}/clinic-information/index.html" title="Schedule Massage Therapy Appointment Now" class="btn btn-danger fright nomargin">Schedule Now</a>
       </div>
     </div>
   </div>
